Closed Bug 483532 Opened 15 years ago Closed 15 years ago

When launching w/ downloads window closed, first download appears at top of downloads window

Categories

(Camino Graveyard :: Downloading, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: ishermandom+bugs, Assigned: ishermandom+bugs)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

4.71 KB, patch
stuart.morgan+bugzilla
: review+
mikepinkerton
: superreview+
Details | Diff | Splinter Review
Regression from bug 406103, in which we moved a lot of things from |init| to |awakeFromNib|.  It seems like the method call sequence is now something like first init the downloads window, then add the download, and then call awakeFromNib:, which is when existing downloads are loaded.

STR:
 1) Close downloads window
 2) Relaunch Camino
 3) Initiate a download

Result:
 Download appears at top of list, rather than at the bottom.
Assignee: nobody → ishermandom+bugs
Won't block b3, but we should really try hard to have it fixed by then, since it's rather odd.
Flags: camino2.0b3?
Keywords: regression
Target Milestone: --- → Camino2.0
Attached patch Fix (obsolete) — Splinter Review
Load model in init rather than in awakeFromNib
Attachment #368989 - Flags: review?(stuart.morgan+bugzilla)
Attached patch Fix, refreshedSplinter Review
Yar, removes an unrelated code change
Attachment #368989 - Attachment is obsolete: true
Attachment #368991 - Flags: review?(stuart.morgan+bugzilla)
Attachment #368989 - Flags: review?(stuart.morgan+bugzilla)
Comment on attachment 368991 [details] [diff] [review]
Fix, refreshed

r=smorgan
Attachment #368991 - Flags: superreview?(mikepinkerton)
Attachment #368991 - Flags: review?(stuart.morgan+bugzilla)
Attachment #368991 - Flags: review+
Attachment #368991 - Flags: superreview?(mikepinkerton) → superreview+
Checked in on cvs trunk.
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: camino2.0b3?
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: