Bug 483532 - When launching w/ downloads window closed, first download appears at top of downloads window.  Patch by Ilya Sherman <ishermandom+bugs@gmail.com>, r=smorgan, sr=pink